# python-count-lines

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/plans/: 2026-05-01-tree-sitter-multilang.md
src/pcl/: __init__.py  cli.py  counter.py  remote.py  report.py  scanner.py  styles.py
src/pcl/languages/: base.py  registry.py
tests/: test_counter.py  test_counter_javascript.py  test_counter_rust.py  test_counter_typescript.py  test_languages_registry.py  test_remote.py  test_report.py  test_scanner.py
