[project]
name = "python-count-lines"
version = "0.1.0"
description = "Count lines of code in Python projects with comment-aware breakdowns"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "frndvrgs", email = "frndvrgs@gmail.com"},
]
dependencies = [
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-rust>=0.24.2",
]

[project.scripts]
pcl = "pcl:main"

[project.urls]
Repository = "https://github.com/frndvrgs/python-count-lines"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pcl"]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.12",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
